--- a/tushare.Rmd
+++ b/tushare.Rmd
@@ -12,9 +12,8 @@ output: html_notebook
 
 升级：pip install tushare --upgrade
 
-
+检查
 ```{python}
-# 检查
 import tushare as ts
 print(ts.__version__)
 ```
@@ -27,7 +26,7 @@ print(ts.__version__)
 ### 股票列表
 ```{python}
 stock_basic = ts.get_stock_basics()
-stock_basic.head(5)
+print(stock_basic.head(5))
 ```
 
 返回值说明：
@@ -54,11 +53,10 @@ stock_basic.head(5)
 
 按年度、季度获取业绩报表数据。
 
-
 ```{python}
-# 获取 2016 年第 4 季度的业绩报表数据
+import tushare as ts
 report = ts.get_report_data(2016, 4)
-report.head(5)
+print(report)
 ```
 
 返回值说明：
@@ -78,8 +76,7 @@ report.head(5)
 
 按年度、季度获取盈利能力数据
 
-```{r}
-# 获取 2016 年第 4 季度的盈利能力数据
+```{python}
 profit = ts.get_profit_data(2016, 4)
 profit.head(5)
 ```
@@ -99,8 +96,7 @@ profit.head(5)
 
 按年度、季度获取营运能力数据
 
-```{r}
-# 获取 2016 年第 4 季度的营运能力数据
+```{python}
 operation = ts.get_operation_data(2016, 4)
 operation.head(5)
 ```
@@ -120,8 +116,7 @@ operation.head(5)
 
 按年度、季度获取成长能力数据
 
-```{r}
-# 获取 2016 年第 4 季度的成长能力数据
+```{python}
 growth = ts.get_growth_data(2016, 4)
 growth.head(5)
 ```
@@ -137,6 +132,543 @@ growth.head(5)
 * epsg,每股收益增长率
 * seg,股东权益增长率
 
+
+### 偿债能力
+
+获取 2014 年第 3 季度的偿债能力数据
+```{r}
+ts.get_debtpaying_data(2014,3)
+```
+
+返回值：
+* code,代码
+* name,名称
+* currentratio,流动比率
+* quickratio,速动比率
+* cashratio,现金比率
+* icratio,利息支付倍数
+* sheqratio,股东权益比率
+* adratio,股东权益增长率
+
+
+### 现金流量
+
+获取 2014 年第 3 季度的现金流量数据
+
+```{r}
+ts.get_cashflow_data(2014,3)
+```
+
+返回值：
+* code,代码
+* name,名称
+* cf_sales,经营现金净流量对销售收入比率
+* rateofreturn,资产的经营现金流量回报率
+* cf_nm,经营现金净流量与净利润的比率
+* cf_liabilities,经营现金净流量对负债比率
+* cashflowratio,现金流量比率
+
+
+## 交易数据
+
+### 历史行情
+获取个股历史交易数据（包括均线数据），可以通过参数设置获取日k线、周k线、月k线，以及5分钟、15分钟、30分钟和60分钟k线数据。
+本接口只能获取近3年的日线数据，适合搭配均线数据进行选股和分析，如果需要全部历史数据，请调用get_h_data()接口
+
+```{r}
+ts.get_hist_data('600848') # 一次性获取全部日 k 线数据
+ts.get_hist_data('600848',start='2015-01-05',end='2015-01-31') # 设定时间
+ts.get_hist_data('600848', ktype='W') # 获取周 k 线数据
+ts.get_hist_data('600848', ktype='M') # 获取月 k 线数据
+ts.get_hist_data('600848', ktype='5') # 获取 5 分钟 k 线数据
+ts.get_hist_data('600848', ktype='15') # 获取 15 分钟 k 线数据
+ts.get_hist_data('600848', ktype='30') # 获取 30 分钟 k 线数据
+ts.get_hist_data('600848', ktype='60') # 获取 60 分钟 k 线数据
+ts.get_hist_data('sh') # 获取上证指数 k 线数据，其它参数与个股一致，下同
+ts.get_hist_data('sz') # 获取深圳成指 k 线数据
+ts.get_hist_data('hs300') # 获取沪深 300 指数 k 线数据
+ts.get_hist_data('sz50') # 获取上证 50 指数 k 线数据
+ts.get_hist_data('zxb') # 获取中小板指数 k 线数据
+ts.get_hist_data('cyb') # 获取创业板指数 k 线数据
+
+# 一次性获取多只股票的数据：
+ts.get_hists()
+
+```
+
+
+参数说明：
+* code：       股票代码，即6位数字代码，或者指数代码（sh=上证指数、sz=深圳成指、hs300=沪深300指数、sz50=上证50、zxb=中小板、cyb=创业板）
+* start：      开始日期，格式YYYY-MM-DD
+* end：        结束日期，格式YYYY-MM-DD
+* ktype：      数据类型，D=日k线、W=周、M=月、5=5分钟、15=15分钟、30=30分钟、60=60分钟，默认为D
+* retry_count：当网络异常后重试次数，默认为3
+* pause:       重试时停顿秒数，默认为0
+
+返回值：
+* date：        日期
+* open：        开盘价
+* high：        最高价
+* close：       收盘价
+* low：         最低价
+* volume：      成交量
+* price_change：价格变动
+* p_change：    涨跌幅
+* ma5：         5日均价
+* ma10：        10日均价
+* ma20:         20日均价
+* v_ma5:        5日均量
+* v_ma10:       10日均量
+* v_ma20:       20日均量
+* turnover:     换手率[注：指数无此项]
+
+
+### 复权数据
+获取历史复权数据，分为前复权和后复权数据，接口提供股票上市以来所有历史数据，默认为前复权。如果不设定开始和结束日期，则返回近一年的复权数据，从性能上考虑，推荐设定开始日期和结束日期，而且最好不要超过三年以上，获取全部历史数据，请分年段分步获取，取到数据后，请及时在本地存储。获取个股首个上市日期，请参考以下方法：
+df = ts.get_stock_basics()
+date = df.ix['600848']['timeToMarket'] # 上市日期 YYYYMMDD
+
+调用：
+```{r}
+ts.get_h_data('002337') # 前复权
+ts.get_h_data('002337',autype='hfq') # 后复权
+ts.get_h_data('002337',autype=None) # 不复权
+ts.get_h_data('002337',start='2015-01-01',end='2015-03-16')
+ts.get_h_data('399106',index=True) # 深圳综合指数，本接口还提供大盘指数的全部历史数据，调用时，请务必设定index参数为True,由于大盘指数不存在复权的问题，故可以忽略autype参数。
+```
+
+
+参数：
+* code        :string,股票代码 e.g. 600848
+* start       :string,开始日期 format：YYYY-MM-DD 为空时取当前日期
+* end         :string,结束日期 format：YYYY-MM-DD 为空时取去年今日
+* autype      :string,复权类型，qfq-前复权 hfq-后复权 None-不复权，默认为qfq
+* index       :Boolean，是否是大盘指数，默认为False
+* retry_count :int, 默认3,如遇网络等问题重复执行的次数
+* pause       :int, 默认0,重复请求数据过程中暂停的秒数，防止请求间隔时间太短出现的问题
+
+
+返回值：
+* date : 交易日期 (index)
+* open : 开盘价
+* high : 最高价
+* close : 收盘价
+* low : 最低价
+* volume : 成交量
+* amount : 成交金额
+
+
+### 实时行情
+
+一次性获取当前交易所有股票的行情数据（如果是节假日，即为上一交易日，结果显示速度取决于网速）
+
+```{r}
+ts.get_today_all()
+```
+
+返回值：
+* code：代码
+* name:名称
+* changepercent:涨跌幅
+* trade:现价
+* open:开盘价
+* high:最高价
+* low:最低价
+* settlement:昨日收盘价
+* volume:成交量
+* turnoverratio:换手率
+
+
+### 历史分笔
+
+获取个股以往交易历史的分笔数据明细，通过分析分笔数据，可以大致判断资金的进出情况。在使用过程中，对于获取股票某一阶段的历史分笔数据，需要通过参入交易日参数并append到一个DataFrame或者直接append到本地同一个文件里。历史分笔接口只能获取当前交易日之前的数据，当日分笔历史数据请调用get_today_ticks()接口或者在当日18点后通过本接口获取。
+
+```{r}
+df = ts.get_tick_data('600848',date='2014-01-09')
+df.head(10)
+```
+
+参数：
+* code：股票代码，即6位数字代码
+* date：日期，格式YYYY-MM-DD
+* retry_count : int, 默认3,如遇网络等问题重复执行的次数
+* pause : int, 默认0,重复请求数据过程中暂停的秒数，防止请求间隔时间太短出现的问题
+
+返回值：
+* time：时间
+* price：成交价格
+* change：价格变动
+* volume：成交手
+* amount：成交金额(元)
+* type：买卖类型【买盘、卖盘、中性盘】
+
+### 实时分笔
+
+获取实时分笔数据，可以实时取得股票当前报价和成交信息，其中一种场景是，写一个python定时程序来调用本接口（可两三秒执行一次，性能与行情软件基本一致），然后通过DataFrame的矩阵计算实现交易监控，可实时监测交易量和价格的变化。
+
+```{python}
+df = ts.get_realtime_quotes('000581') #Single stock symbol
+df[['code','name','price','bid','ask','volume','amount','time'
+
+# 请求多个股票方法（一次最好不要超过30个）：
+#symbols from a list
+ts.get_realtime_quotes(['600848','000980','000981'])
+#from a Series
+ts get_realtime_quotes(df['code'] tail(10)) # 一次获取 10 个股票的
+
+
+# 获取实时指数：
+# 上证指数
+ts.get_realtime_quotes('sh')
+# 上证指数 深圳成指 沪深 300 指数 上证 50 中小板 创业板
+ts.get_realtime_quotes(['sh','sz','hs300','sz50','zxb','cyb'
+# 或者混搭
+ts.get_realtime_quotes(['sh','600848'])
+```
+
+
+参数：
+* symbols：6位数字股票代码，或者指数代码（sh=上证指数 sz=深圳成指hs300=沪深300指数 sz50=上证50 zxb=中小板 cyb=创业板） 可输入的类型：
+str、list、set或者pandas的Series对象
+
+返回值：
+0：name，股票名字
+1：open，今日开盘价
+2：pre_close，昨日收盘价
+3：price，当前价格
+4：high，今日最高价
+5：low，今日最低价
+6：bid，竞买价，即“买一”报价
+7：ask，竞卖价，即“卖一”报价
+8：volumn，成交量 maybe you need do volumn/100
+9：amount，成交金额（元 CNY）
+10：b1_v，委买一（笔数 bid volume）
+11：b1_p，委买一（价格 bid price）
+12：b2_v，“买二”
+13：b2_p，“买二”
+14：b3_v，“买三”
+15：b3_p，“买三”
+16：b4_v，“买四”
+17：b4_p，“买四”
+18：b5_v，“买五”
+19：b5_p，“买五”
+20：a1_v，委卖一（笔数 ask volume）
+21：a1_p，委卖一（价格 ask price）
+...
+30：date，日期；
+31：time，时间；
+
+
+
+### 当日历史分笔
+
+获取当前交易日（交易进行中使用）已经产生的分笔明细数据
+
+```{r}
+df = ts.get_today_ticks('601333')
+df.head(10)
+```
+
+参数：
+code：股票代码，即6位数字代码
+retry_count : int, 默认3,如遇网络等问题重复执行的次数
+pause : int, 默认0,重复请求数据过程中暂停的秒数，防止请求间隔时间太短出现
+的问题
+
+
+返回值：
+time：时间
+price：当前价格
+pchange:涨跌幅
+change：价格变动
+volume：成交手
+amount：成交金额(元)
+type：买卖类型【买盘、卖盘、中性盘】
+
+
+
+
+### 大盘指数行情列表
+```{r}
+df = ts.get_index()
+```
+
+
+返回值：
+code:指数代码
+name:指数名称
+change:涨跌幅
+open:开盘点位
+preclose:昨日收盘点位
+close:收盘点位
+high:最高点位
+low:最低点位
+volume:成交量(手)
+amount:成交金额（亿元）
+
+
+
+## 宏观经济数据
+
+### 存款利率
+
+```{r}
+ts.get_deposit_rate()
+```
+
+返回值：
+date        ：变动日期
+deposit_type：存款种类
+rate        ：利率（%）
+
+
+### 贷款利率
+
+```{r}
+ts.get_loan_rate()
+```
+
+返回值：
+date        :执行日期
+loan_type   :存款种类
+rate        :利率（%）
+
+
+
+### 存款准备金率
+
+```{r}
+ts.get_rrr()
+```
+
+返回值：
+date        :变动日期
+before      :调整前存款准备金率(%)
+now         :调整后存款准备金率(%)
+changed     :调整幅度(%)
+
+
+### 货币供应量
+
+```{r}
+ts.get_money_supply()
+```
+
+返回值：
+month       :统计时间
+m2          :货币和准货币（广义货币M2）(亿元)
+m2_yoy      :货币和准货币（广义货币M2）同比增长(%)
+m1          :货币(狭义货币M1)(亿元)
+m1_yoy      :货币(狭义货币M1)同比增长(%)
+m0          :流通中现金(M0)(亿元)
+m0_yoy      :流通中现金(M0)同比增长(%)
+cd          :活期存款(亿元)
+cd_yoy      :活期存款同比增长(%)
+qm          :准货币(亿元)
+qm_yoy      :准货币同比增长(%)
+ftd         :定期存款(亿元)
+ftd_yoy     :定期存款同比增长(%)
+sd          :储蓄存款(亿元)
+sd_yoy      :储蓄存款同比增长(%)
+rests       :其他存款(亿元)
+rests_yoy   :其他存款同比增长(%)
+
+
+### 货币供应量(年底余额)
+
+ts.get_money_supply_bal()
+
+year        :统计年度
+m2          :货币和准货币(亿元)
+m1          :货币(亿元)
+m0          :流通中现金(亿元)
+cd          :活期存款(亿元)
+qm          :准货币(亿元)
+ftd         :定期存款(亿元)
+sd          :储蓄存款(亿元)
+rests       :其他存款(亿元)
+
+
+
+### 国内生产总值(年度)
+
+ts.get_gdp_year()
+
+year        :统计年度
+gdp         :国内生产总值(亿元)
+pc_gdp      :人均国内生产总值(元)
+gnp         :国民生产总值(亿元)
+pi          :第一产业(亿元)
+si          :第二产业(亿元)
+industry    :工业(亿元)
+cons_industry :建筑业(亿元)
+ti          :第三产业(亿元)
+trans_industry :交通运输仓储邮电通信业(亿元)
+lbdy        :批发零售贸易及餐饮业(亿元)
+
+### 国内生产总值(季度)
+
+ts.get_gdp_quarter()
+
+quarter     :季度
+gdp         :国内生产总值(亿元)
+gdp_yoy     :国内生产总值同比增长(%)
+pi          :第一产业增加值(亿元)
+pi_yoy      :第一产业增加值同比增长(%)
+si          :第二产业增加值(亿元)
+si_yoy      :第二产业增加值同比增长(%)
+ti          :第三产业增加值(亿元)
+ti_yoy      :第三产业增加值同比增长(%)
+
+### 三大需求对GDP贡献
+
+ts.get_gdp_for()
+
+year        :统计年度
+end_for     :最终消费支出贡献率(%)
+for_rate    :最终消费支出拉动(百分点)
+asset_for   :资本形成总额贡献率(%)
+asset_rate  :资本形成总额拉动(百分点)
+goods_for   :货物和服务净出口贡献率(%)
+goods_rate  :货物和服务净出口拉动(百分点)
+
+### 三大产业对GDP拉动
+
+ts.get_gdp_pull()
+
+year        :统计年度
+gdp_yoy     :国内生产总值同比增长(%)
+pi          :第一产业拉动率(%)
+si          :第二产业拉动率(%)
+industry    :其中工业拉动(%)
+ti          :第三产业拉动率(%)
+
+### 三大产业贡献率
+
+ts.get_gdp_contrib()
+
+year        :统计年度
+gdp_yoy     :国内生产总值
+pi          :第一产业献率(%)
+si          :第二产业献率(%)
+industry    :其中工业献率(%)
+ti          :第三产业献率(%)
+
+### 居民消费价格指数
+
+ts.get_cpi()
+
+month       :统计月份
+cpi         :价格指数
+
+### 工业品出厂价格指数
+
+ts.get_ppi()
+
+month       :统计月份
+ppiip       :工业品出厂价格指数
+ppi         :生产资料价格指数
+qm          :采掘工业价格指数
+rmi         :原材料工业价格指数
+pi          :加工工业价格指数
+cg          :生活资料价格指数
+food        :食品类价格指数
+clothing    :衣着类价格指数
+roeu        :一般日用品价格指数
+dcg         :耐用消费品价格指数
+
+
+
+
+股票分类数据
+TuShare提供的分类数据主要包括以下类别：
+* 行业分类
+* 概念分类
+* 地域分类
+* 中小板分类
+* 创业板分类
+* 风险警示板分类
+* 沪深300成份股及权重
+* 上证50成份股
+* 中证500成份股
+* 终止上市股票列表
+* 暂停上市股票列表
+
+
+
+
+
+### 行业分类
+ts.get_industry_classified()
+code：股票代码
+name：股票名称
+c_name：行业名称
+
+### 概念分类
+ts.get_concept_classified()
+code：股票代码
+name：股票名称
+c_name：概念名称
+
+### 地域分类
+ts.get_area_classified()
+file_path:文件路径，默认为None即由TuShare提供，可以设定自己的股票文件路径
+
+code：股票代码
+name：股票名称
+area：地域名称
+
+### 中小板分类
+ts.get_sme_classified()
+file_path:文件路径，默认为None即由TuShare提供，可以设定自己的股票文件路径
+code：股票代码
+name：股票名称
+
+### 创业板分类
+ts.get_gem_classified()
+file_path:文件路径，默认为None即由TuShare提供，可以设定自己的股票文件路径
+code：股票代码
+name：股票名称
+
+### 风险警示板分类
+即所有st股票
+ts.get_st_classified()
+file_path:文件路径，默认为None即由TuShare提供，可以设定自己的股票文件路径
+
+code：股票代码
+name：股票名称
+
+
+### 沪深300成份及权重
+ts.get_hs300s()
+code :股票代码
+name :股票名称
+date :日期
+weight:权重
+
+
+### 上证50成份股
+ts.get_sz50s()
+code：股票代码
+name：股票名称
+### 中证500成份股
+ts.get_zz500s()
+code：股票代码
+name：股票名称
+
+### 终止上市股票列表
+ts.get_terminated()
+code：股票代码
+name：股票名称
+oDate:上市日期
+tDate:终止上市日期
+
+### 暂停上市股票列表
+ts.get_suspended()
+code：股票代码
+name：股票名称
+oDate:上市日期
+tDate:暂停上市日期
 
 
 
